# TX2_ros_tegra_stereo

./: CMakeLists.txt  README.md  package.xml
data/: stereo_matching_params.ini~
nvxio/: Makefile
nvxio/src/: OpenGLShaders.hpp
other/: ProfilerRange.cpp  ProfilerRange.hpp  Render3DOVX.hpp  color_disparity_graph.cpp
other/Render/: GlfwUIRenderImpl.cpp  Render3DImpl.hpp  RenderOVX.cpp
other/detail/: OptionHandler.hpp
params/: cam_stereo.yml
src/: Application.cpp  ArgumentParser.hpp  ConfigParser.cpp  ConfigParser.hpp  FrameSource.hpp  FrameSourceOVX.hpp  NVXIOFeatures.cpp  OptionHandler.cpp  OptionHandler.hpp  Render.hpp  Render3D.hpp  RenderOVX.hpp  SyncTimer.cpp  SyncTimer.hpp  Utility.cpp  Utility.hpp  UtilityOVX.cpp  UtilityOVX.hpp  my_subscriber.cpp  sgbm_disparity.cpp  stereo_matching.cpp
src/FrameSource/: ConvertFrame.cpp  FrameSource.cpp  FrameSourceImpl.hpp  FrameSourceOVX.cpp
src/Private/: LogUtils.cpp  LogUtils.hpp  Types.cpp  TypesOVX.cpp
src/Render/: Render.cpp  Render3D.cpp  Render3DOVX.cpp  RenderImpl.hpp
