<?xml version="1.0"?>
<package>
  <name>ros_tegra_stereo</name>
  <version>0.1.0</version>
  <description>ROS Node for Stereo Vision - NVIDIA TX1/TX2</description>

  <maintainer email="sshreyas@seas.upenn.edu">Shreyas Skandan Shivakumar</maintainer>
  <license>BSD</license>
  <url type="website">https://shreyasskandan.github.io</url>
  <author email="sshreyas@seas.upenn.edu">Shreyas Skandan Shivakumar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
